--- a/src/components/request_popup.html
+++ b/src/components/request_popup.html
@@ -38,7 +38,7 @@
 
         <ul class="social__list">
           <li class="social__item">
-            <a href="https://dribble.com" class="social__link" target="_blank">
+            <a href="https://dribbble.com" class="social__link" target="_blank">
               <span class="social__icon icon-dribbble"></span>
             </a>
           </li>
