--- a/src/styles/pages/about.scss
+++ b/src/styles/pages/about.scss
@@ -206,11 +206,20 @@
   &__item-links {
     display: flex;
     gap: 30px;
-    color: var(--medium-grey);
 
     .icon {
       font-size: 24px;
       line-height: 1;
+      color: var(--medium-grey);
+      transition: color ease-in-out 0.4s;
+    }
+
+    a {
+      &:hover {
+        .icon {
+          color: var(--main-purple);
+        }
+      }
     }
   }
 }
