--- a/src/styles/pages/about.scss
+++ b/src/styles/pages/about.scss
@@ -98,6 +98,18 @@
       padding: 30px 63px;
     }
   }
+
+  &__item-line {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+
+    .stat-number {
+      &.animation {
+        animation: scaleUp 2s ease-in-out;
+      }
+    }
+  }
 }
 
 .founders {
@@ -413,5 +425,17 @@ section {
 
   @include desktop {
     padding: 120px 0;
+  }
+}
+
+@keyframes scaleUp {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.4);
+  }
+  100% {
+    transform: scale(1);
   }
 }
